--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="scripts/css/style.css">
+    <title>Goonket</title>
 </head>
 <body>
-    <p1> hello</p1>
-    
+    <div class="header">
+        <button onclick="window.location.href='login.html'">Login</button>
+    </div>
+    <h1>Goonket</h1>
 </body>
 </html>
