--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scripts/css/style.css">
+    <script src="scripts/js/main.js"></script>
     <title>Goonket</title>
 </head>
 <body>
