--- a/login.html
+++ b/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scripts/css/style.css">
-    <title>Login - Goonket</title>
-
+    <title>Login</title>
+    <script src="scripts/js/main.js"></script>
 </head>
 <body>
     <div class="login-container">
         <h1>Login</h1>
-        <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+        <form id="loginForm">
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="button" id="loginButton">Login</button>
         </form>
     </div>
 </body>
