--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="scripts/css/style.css">
-    <script src="scripts/js/main.js"></script>
-    <title>Goonket</title>
+    <title>Login & Register</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <button onclick="window.location.href='login.html'">Login</button>
+
+    <!-- Login Form -->
+    <div id="login-screen" class="form-container">
+        <h2>Login</h2>
+        <form id="login-form">
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="#" id="show-register">Register</a></p>
     </div>
-    <h1>Goonket</h1>
+
+    <!-- Register Form -->
+    <div id="register-screen" class="form-container" style="display: none;">
+        <h2>Register</h2>
+        <form id="register-form">
+            <input type="text" id="register-username" placeholder="Username" required>
+            <input type="password" id="register-password" placeholder="Password" required>
+            <button type="submit">Register</button>
+        </form>
+        <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+    </div>
+
+    <!-- Dashboard -->
+    <div id="dashboard" style="display: none;">
+        <h2>Welcome to your Dashboard</h2>
+        <button id="logout-btn">Logout</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
