--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login & Register</title>
-    <link rel="stylesheet" href="styles.css">
+<title>Login & Register</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <!-- Login Form -->
     <div id="login-screen" class="form-container">
         <h2>Login</h2>
@@ -38,4 +32,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html
