--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Login & Register</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Login Form -->
